# voxel

./: .gitignore  README.md  acquisition.py  camera_vieworks_egrabber.py  filterwheel_asi.py  instrument.py  process_logging_test.py  pyproject.toml  simulated_instrument.py  simulated_instrument.yaml  simulated_test.py  simulated_test2.py  singleton_test.py  stage_asi.py  test_acquisition.yaml  test_camera.py  test_camera.yaml  test_instrument.py  test_instrument.yaml  test_instrument_mip.py  test_stage.py  test_stage.yaml
Cameras/hamamatsu_acquire/: camera_hamamatsu_acquire.py  test_hamamatsu_acquire_camera.py
Cameras/vieworks_acquire/: camera_vieworks_acquire.py
Cameras/vieworks_egrabber/: camera_vieworks_egrabber.py  test_vieworks_egrabber_camera.py  test_vieworks_egrabber_camera.yaml
Lasers/: laser_base.py  laser_lbx_oxxius.py  laser_lcx_oxxius.py  oxxius_driver.py  test_laser.py  test_laser.yaml  test_oxxius_laser.py  test_oxxius_laser.yaml
Lasers/oxxius/: test_oxxius_laser.yaml
_prev/: acquisition_0.py  instrument.py
_prev/daq/: ni.py  simulated.py
_prev/metadata/: metadata_class.py
acquisition/: base.py
devices/camera/: base.py  simulated.py  test_camera.py  test_camera_simulated.py  test_camera_simulated.yaml  test_camera_vieworks_egrabber.py  test_camera_vieworks_egrabber.yaml  vieworks_acquire.py  vieworks_egrabber.py
devices/camera/hamamatsu_acquire/: camera_hamamatsu_acquire.py  test_hamamatsu_acquire_camera.py
devices/camera/tests/: test_camera_vieworks_egrabber.py  test_camera_vieworks_egrabber.yaml
devices/daq/: data.csv  ni.py  test_ni.py
devices/filterwheel/: asi.py  base.py  simulated.py  test_asi.py  test_simulated.py  test_simulated.yaml  test_wheel.py
devices/filterwheel/tests/: test_asi.py  test_asi.yaml
devices/lasers/: laser_base.py  simulated.py
devices/lasers/obis/: laser_ls_obis.py  laser_lx_obis.py  test_obis_laser.py
devices/lasers/oxxius/: laser_lbx_oxxius.py  laser_lcx_oxxius.py  simulated.py  test_oxxius_laser.py  test_oxxius_laser.yaml
devices/lasers/vortran/: laser_stradus_vortran.py  laser_vortran_stradus.py
devices/stage/: asi.py  base.py  simulated.py  test_asi.py  test_asi.yaml  test_simulated.py  test_stage.py  test_stage.yaml
devices/stage/tests/: test_asi.py  test_simulated.yaml
exa_spim_refactor/: __init__.py  acquisition.py  instrument.py
exa_spim_refactor/acquisition/: base.py
exa_spim_refactor/devices/aotf/: aaopto.py
exa_spim_refactor/devices/camera/: base.py  hamamatsu_dcam.py  pco.py  pco_camera.py  simulated.py  simulated_test.py  test_camera_hamamatsu_dcam.py  test_camera_pco.py  test_camera_simulated.py  test_camera_vieworks_egrabber.py  vieworks_egrabber.py
exa_spim_refactor/devices/daq/: ni.py  simulated.py  test_ni.py  test_ni.yaml
exa_spim_refactor/devices/filterwheel/: asi.py  base.py  simulated.py  test_asi.py  test_simulated.py
exa_spim_refactor/devices/lasers/: aaopto.py  (+2 more)
exa_spim_refactor/processes/: file_transfer.py  max_projection.py
exa_spim_refactor/writers/: acquire.py  bdv.py  imaris.py  test_bdv.py  test_bdv.yaml  test_imaris.py  test_imaris.yaml  test_tiff.py  test_tiff.yaml  tiff.py
examples/: acquisition.yaml  counter.py  instrument.yaml  simulated_acquisition.yaml  simulated_instrument.py  simulated_instrument.yaml  simulated_test.py  simulated_test2.py  subprocess_logging.py  test.py  test_acquisition.yaml  test_instrument.py  test_instrument.yaml  test_instrument2.yaml
examples/daq/: example.py  example_generate_waveforms.py
examples/daq_exp/: simulated.py
examples/filter/: simulated_filter_wheel.py
examples/gputools_updates/: myconfigparser.py
examples/instrument/: acquisition_plan.yaml  example_acquisition.yaml  example_acquisition_script.py  example_instrument.yaml  example_instrument_script.py  example_settings.yaml  example_tile_data.pkl  example_tile_data.yaml  instrument_build.yaml  load_instrument.py  simulated.py  simulated.yaml  simulated_instrument.py
examples/integration/: example_acquisition.yaml  load_acquisition.py  load_instrument.py
examples/rotation_axis/: simulated_rotation_axis.py
examples/stage/: example_linear_axis.py
examples/tunable_lens/: optotune.py
examples/yaml_config/: main.py
processes/: background_collection.py  file_transfer.py  max_projection.py
src/voxel/: __init__.py
tests/: __init__.py  test_linescancamera_vieworks_egrabber.py  test_robocopy.py  test_rsync.py
tests/acquire/: test.py
tests/descriptors/: deliminated_property.py
tests/devices/: conftest.py
tests/processes/: test_histogram.py  test_max_projection.py  test_max_projection_cpu.py  test_max_projection_gpu.py
tests/utils/: singleton_test.py
tests/writers/: test_bdv.py  test_imaris.py  test_imaris.yaml  test_tensorstore.py  test_tiff.py  test_zarr_v3.py  test_zarr_v3.yaml
voxel/: __init__.py  acquisition.py  instrument.py
voxel/acquisition/: __init__.py  _config.py  _factory.py  acquisition.py  acquisition_0.py  base.py  channel.py  config.py  engine.py  exaspim.py  factory.py  frame_stack.py  persistence.py  planner.py  scan_path.py  scan_plan.py  volume.py
voxel/descriptors/: deliminated_property.py  descriptor_proxy.py  enumerated_property.py  updating_property.py
voxel/devices/: __init__.py  base.py  definitions.py  device.py  tigerbox.py
voxel/file_transfers/: __init__.py  base.py  robocopy.py  rsync.py
voxel/instrument/: __init__.py  _config.py  channel.py  config.py  definitions.py  device.py  factory.py  instrument.py
voxel/instruments/: config.py  definitions.py  factory.py  factory_0.py  instrument.py  instrument_0.py  spinner.py
voxel/metadata/: metadata_class.py
voxel/processes/: histogram.py  max_projection.py  mean_projection.py
voxel/routines/: background_collection.py
voxel/transfers/: robocopy.py  rsync.py
voxel/utils/: geometry.py  logging_config.py
voxel/writers/: acquire.py  acquire_zarr.py  base.py  bdv.py  imaris.py  tiff.py  zarr_v3.py
writers/: imaris.py  imaris_writer.py  test_imaris.py  test_writer.py  test_writer.yaml
writers/data_structures/: shared_double_buffer.py
(+755 files in other folders)
