[project]
name = "voxel"
version = "0.1.0"
description = "Python Library for building SPIM software"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Micah Woodard", email = "micah.woodard@alleninstitute.org" },
    { name = "Adam Glaser", email = "adam.glaser@alleninstitute.org" },
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.12"
dependencies = [
    # core
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "pydantic>=2.9.2",
    "ruamel-yaml >= 0.18.5",
    # hardware
    "nidaqmx>=1.0.1",
    "pyserial >= 3.5",
    "pyusb >= 1.2.1",
    "PyVISA-py >= 0.7.2",
    "tigerasi >= 0.0.26",
    # files
    "imohash>=1.1.0",
    "tifffile>=2024.9.20",
    # processing
    "gputools >= 0.2.14",
    # utils
    "sympy >= 1.12.1",
]

[project.optional-dependencies]
bdv = ["h5py>=3.12.1", "tqdm>=4.66.5"]
imaris = ["pyimariswriter>=0.7.0"]
aaopto = ["aaopto-aotf>=0.0.11"]
thorlabs = ["pylablib>=1.4.2"]
cobolt_laser = ["pycobolt @ git+https://github.com/cobolt-lasers/pycobolt.git"]
coherent_laser = ["coherent_lasers @ git+https://github.com/AllenNeuralDynamics/coherent_lasers.git"]
vortran_laser = ["vortran_laser @ git+https://github.com/AllenNeuralDynamics/vortran_laser.git"]
oxxius_laser = ["oxxius_laser @ git+https://github.com/AllenNeuralDynamics/oxxius_laser.git"]
# obis_laser = ["obis_laser @ git+https://github.com/AllenNeuralDynamics/obis-laser.git"]

lasers = [
    "pycobolt @ git+https://github.com/cobolt-lasers/pycobolt.git",
    "coherent_lasers @ git+https://github.com/AllenNeuralDynamics/coherent_lasers.git",
    "vortran_laser @ git+https://github.com/AllenNeuralDynamics/vortran_laser.git",
    "oxxius_laser @ git+https://github.com/AllenNeuralDynamics/oxxius_laser.git",
    # "obis_laser @ git+https://github.com/AllenNeuralDynamics/obis-laser.git"
]

dev = [
    "pytest>=8.1.1,<9",
    "black",
    "coverage",
    "flake8",
    "interrogate",
    "isort",
    "Sphinx",
    "furo",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
src = "voxel"
line-length = 120
target_version = ["py36"]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["voxel", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
