[project]
name = "voxel"
description = "Python Library for building SPIM software"
authors = [
    { name = "Micah Woodard", email = "micah.woodard@alleninstitute.org" },
    { name = "Adam Glaser", email = "adam.glaser@alleninstitute.org" },
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "microscopy",
    "light-sheet",
    "lightsheet",
    "microscope",
    "imaging",
]
dynamic = ["version"]
dependencies = [
    # core
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "pydantic>=2.9.2",
    "ruamel-yaml >= 0.18.5",
    # hardware
    "nidaqmx>=1.0.1",
    "pyserial >= 3.5",
    "pyusb >= 1.2.1",
    "PyVISA-py >= 0.7.2",
    "tigerasi >= 0.0.26",
    # files
    "imohash>=1.1.0",
    "tifffile>=2024.9.20",
    # processing
    "gputools >= 0.2.14",
    "fast-histogram >= 0.14",
    # utils
    "sympy >= 1.12.1",
]

[project.optional-dependencies]
bdv = ["h5py>=3.12.1", "tqdm>=4.66.5"]
imaris = ["pyimariswriter>=0.7.0"]
aaopto = ["aaopto-aotf>=0.0.11"]
thorlabs = ["pylablib>=1.4.2"]
cobolt = ["pycobolt @ git+https://github.com/cobolt-lasers/pycobolt.git"]
coherent = ["coherent_lasers @ git+https://github.com/AllenNeuralDynamics/coherent_lasers.git"]
vortran = ["vortran_laser @ git+https://github.com/AllenNeuralDynamics/vortran_laser.git"]
oxxius = ["oxxius_laser @ git+https://github.com/AllenNeuralDynamics/oxxius_laser.git"]
# obis = ["obis_laser @ git+https://github.com/AllenNeuralDynamics/obis-laser.git"]

lasers = [
    "pycobolt @ git+https://github.com/cobolt-lasers/pycobolt.git",
    "coherent-lasers @ git+https://github.com/AllenNeuralDynamics/coherent_lasers.git",
    "vortran-laser @ git+https://github.com/AllenNeuralDynamics/vortran_laser.git",
    "oxxius-laser @ git+https://github.com/AllenNeuralDynamics/oxxius_laser.git",
    # "obis-laser @ git+https://github.com/AllenNeuralDynamics/obis-laser.git"
]

dev = [
    "pytest<9",
    "black",
    "coverage",
    "flake8",
    "interrogate",
    "isort",
    "Sphinx",
    "furo",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["voxel"]

[tool.setuptools.dynamic]
version = { attr = "voxel.__version__" }

[tool.black]
src = "voxel"
line-length = 120
target-version = ["py311"]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["voxel", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
